bug: overflow error fixing

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -118,6 +118,7 @@ body {
   z-index: 1;
   width: 100%;
   height: 100%;
+  overflow: hidden;
 }
 
 .snowing .small {
